[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
ternary-rs = "1.0.0"

[[bin]]
name = "bill"           # The name of the target.
path = "src/bin/bill.rs"    # The source file of the target.
